# R2R2

./: .gitignore  Cargo.toml  README.md  build.rs
assets/scenes/: cube.gltf
assets/shaders/: closesthit.rchit  frag_shader.frag  miss.rmiss  raygen.rgen  vert_shader.vert
examples/: building.rs  cube.rs  ray_tracing.rs
src/: application.rs  application_manager.rs  camera_manager.rs  geometry_instance.rs  input_manager.rs  lib.rs  model.rs  render_manager.rs  renderer.rs  window.rs  window_manager.rs
src/scene/: scene_manager.rs
vulkan_helpers/: Cargo.toml
vulkan_helpers/src/: acceleration_structure.rs  bottom_level_acceleration_structure.rs  buffer.rs  command_buffers.rs  context.rs  depth_resources.rs  descriptor_pool.rs  descriptor_set.rs  descriptor_set_layout.rs  device.rs  errors.rs  extensions.rs  frame_buffer.rs  geometry_instance.rs  image_views.rs  images.rs  instance.rs  lib.rs  material.rs  physical_device.rs  pipeline.rs  pipeline_context.rs  present_mode.rs  queue_family.rs  ray_tracing.rs  ray_tracing_descriptor_set.rs  ray_tracing_pipeline.rs  render_pass.rs  shader_binding_table.rs  shader_module.rs  surface.rs  surface_format.rs  swapchain.rs  swapchain_context.rs  texture.rs  vertex.rs  vulkan_context.rs
vulkan_ray_tracing/: Cargo.toml
vulkan_ray_tracing/src/: acceleration_structure.rs  bottom_level_acceleration_structure.rs  descriptor_set.rs  geometry_instance.rs  graphics_pipeline.rs  lib.rs  material.rs  pipeline.rs  ray_tracing.rs  ray_tracing_pipeline.rs  shader_binding_table.rs
