[package]
name = "r2r2"
version = "0.1.0"
authors = ["David Partouche <david.partouche@gmail.com>"]
edition = "2018"

[workspace]
members = ["vulkan_ray_tracing"]

[dependencies]
clap = "2.33.0"
gltf = "0.14.0"
image = "0.22.3"
simplelog = "0.7.3"
tobj = "0.1.11"
vulkan_bootstrap = { git = "https://github.com/DavidPartouche/vulkan_bootstrap" }
vulkan_ray_tracing = { path = "vulkan_ray_tracing" }
winit = "0.20.0-alpha3"
